implement use case